bug 432065. deal with multiple fonts with the same name.  r=roc a=schrep